syntax = "proto3";

import "google/protobuf/timestamp.proto";

package ranabd36.qaengine;

option go_package = "pb";

message User {
  int32 id = 1; // Unique ID for this user.
  string first_name = 2;
  string last_name = 3;
  string username = 4;
  string email = 5;
  string password = 6;
  bool is_active = 7;
  bool is_admin = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  int32 id = 1;
}

message FindUserRequest {
  int32 id = 1;
}

message FindUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  User user = 1;
}

message UpdateUserResponse {
  bool is_updated = 1;
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  bool is_deleted = 1;
}

message ChangePasswordRequest {
  int32 id = 1;
  string old_password = 2;
  string new_password = 3;
  string retype_new_password = 4;
}

message ChangePasswordResponse {
  bool is_password_changed = 1;
}

message ToggleAdminRequest {
  int32 id = 1;
}

message ToggleAdminResponse {
  bool is_updated = 1;
}

message ToggleActiveRequest {
  int32 id = 1;
}

message ToggleActiveResponse {
  bool is_updated = 1;
}

service UserServiceServer {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {};
  rpc FindUser (FindUserRequest) returns (FindUserResponse) {};
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {};
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {};
  rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordResponse) {};
  rpc ToggleAdmin (ToggleAdminRequest) returns (ToggleAdminResponse) {};
  rpc ToggleActive (ToggleActiveRequest) returns (ToggleActiveResponse) {};
}